Hero Background image fixed

--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,4 +1,4 @@
 .bg{
-    background-image: url(/src/bg/Ellipse\ 87.png);
+    background-image: url("/Ellipse 87.png");
     background-color: linear-gradient(172.23deg, #FAFCFE 10.94%, #F2F3F9 93.99%);
 }
