--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -2,3 +2,22 @@
     background-image: url("/Ellipse 87.png");
     background-color: linear-gradient(172.23deg, #FAFCFE 10.94%, #F2F3F9 93.99%);
 }
+@keyframes pulse {
+    0% {
+      transform: scale(1);
+      opacity: 1;
+    }
+    50% {
+      transform: scale(1.2);
+      opacity: 0.7;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
+  
+  .pulse {
+    animation: pulse 1.5s infinite;
+  }
+  
